Add WP plugin directory listing

--- a/apps/site/src/_pages/docs/3_using-blocks.mdx
+++ b/apps/site/src/_pages/docs/3_using-blocks.mdx
@@ -13,7 +13,7 @@ HASH is a block-based knowledge management, business intelligence and tool-build
 
 ### WordPress
 
-The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin adds support for Þ blocks within the existing WordPress Gutenberg editor. It is currently available for [early access testing](https://blockprotocol.org/wordpress), and will become generally available at the end of February 2023 alongside version 0.3 of the Block Protocol specification.
+The [Block Protocol for Wordpress](https://blockprotocol.org/wordpress) plugin adds support for Þ blocks within the existing WordPress Gutenberg editor. It can be downloaded directly from [the WordPress plugin directory](https://wordpress.org/plugins/blockprotocol/), or by any WordPress admin via the 'Plugins' screen in their `wp-admin`, by searching for the "Block Protocol".
 
 ## Coming soon
 
