copy updates. add type editor image

--- a/apps/site/src/_pages/docs/0_index.mdx
+++ b/apps/site/src/_pages/docs/0_index.mdx
@@ -8,7 +8,7 @@ The following pages provide a practical introduction for those:
 
 - [using blocks](https://blockprotocol.org/docs/using-blocks) within applications that support the Block Protocol
 - [building blocks](https://blockprotocol.org/docs/developing-blocks) and publishing them to the [Þ Hub](https://blockprotocol.org/hub)
-- [building block-based applications](https://blockprotocol.org/docs/using-blocks) that leverage the Block Protocol
+- [building block-based applications](https://blockprotocol.org/docs/using-blocks#other-environments) that leverage the Block Protocol
 
 If you have any questions, [please open or contribute to a discussion](https://github.com/blockprotocol/blockprotocol/discussions). You can also [chat to us on Discord](https://blockprotocol.org/discord).
 
