--- a/apps/site/src/_pages/docs/3_using-blocks.mdx
+++ b/apps/site/src/_pages/docs/3_using-blocks.mdx
@@ -33,4 +33,6 @@ Support for additional embedding environments will arrive throughout 2023. If th
 
 If you're interested in supporting the Block Protocol within your application now, allowing your users to insert and use blocks from the [Þ Hub](https://blockprotocol.org/hub), please [contact us](https://blockprotocol.org/contact) with more information about your intended use, and we'll be in touch.
 
-You can also [register for updates](https://blockprotocol.org/signup) to find out as and when we release new docs and tools for embedding applications.
+We'll be releasing public documentation covering this process, but while the protocol remains under heavy active development, please reach out directly.
+
+You can also [register for updates](https://blockprotocol.org/signup) to get notified when we release new docs and tools for embedders.
