--- a/apps/site/src/_pages/docs/2_working-with-types.mdx
+++ b/apps/site/src/_pages/docs/2_working-with-types.mdx
@@ -1,4 +1,4 @@
-# Working with types
+# Working With Types
 
 ## Introduction
 
@@ -26,7 +26,7 @@ The type system consists of these primitive parts:
 
 ## Creating types
 
-The easiest way to get started is to visit [your dashboard](/dashboard) and clicking 'create an entity type'.
+The easiest way to get started is to visit [your dashboard](/dashboard) and click 'create an entity type'.
 
 Give your entity type a name and a description, and then click 'create'.
 
@@ -35,6 +35,8 @@ You can now define the _properties_ your entity expects:
 1.  Start typing to see if a suitable property already exists (e.g. called 'Name' with an expected data type of 'Text')
 2.  Either select an existing property type, or click 'create new' to create a new one
 3.  If creating a new one, specify a title, description, and expected value
+
+![A basic entity type with a `Name` property](/assets/type-editor.png)
 
 You can also define the _links_ your entity expects following a similar process:
 
